tests/parse_errors.err
Parse Error in line 4, column 13 of "parse_errors.af"
|   { x: 4, x: 5},
|               ^
Error: Redefinition of label 'x' in map

Parse Error in line 16, column 24 of "parse_errors.af"
|   {1, "zing zing", 4n  kd ( $ $, "this is": "correct"} = ``,
|                          ^
Error: Ill formed member

Parse Error in line 17, column 22 of "parse_errors.af"
|   { "good", second: njd %% & 62 ] , third: "good"} = ``,
|                        ^
Error: Ill formed member

Parse Error in line 18, column 16 of "parse_errors.af"
|   ["this", "next"  ( % ^&, "last"] = ``,
|                  ^
Error: Ill formed member

Parse Error in line 23, column 21 of "parse_errors.af"
|       4 * (x: 3) = ``,
|                       ^
Error: Redefinition of label 'x' in map

Parse Error in line 25, column 16 of "parse_errors.af"
|       y: 12 = ``,
|                  ^
Error: Redefinition of label 'y' in map

Parse Error in line 42, column 56 of "parse_errors.af"
|   	x / hello ^ (: 2) = `Eval Error: Unresolved name "x"`,
|                                                          ^
Error: Redefinition of map target

7 Parse Errors encountered


line 8, column 15 of "parse_errors.af" Eval Error: Circular dependency
line 9, column 27 of "parse_errors.af" Eval Error: Circular dependency
line 10, column 26 of "parse_errors.af" Eval Error: Circular dependency
line 11, column 26 of "parse_errors.af" Eval Error: Circular dependency
line 12, column 26 of "parse_errors.af" Eval Error: Circular dependency
line 30, column 30 of "parse_errors.af" Eval Error: Circular dependency
line 32, column 26 of "parse_errors.af" Eval Error: Circular dependency
line 42, column 22 of "parse_errors.af" Eval Error: Unresolved name "x"
8 Eval Errors encountered
